# prefect-playground

./: .gitignore  .markdownlint-cli2.yaml  .prefectignore  01_getting_started.py  02_resilience.py  03_caching.py  04_results_storage.py  05_deployment.py  06_diagnose.py  07_alerts.py  08_workers.py  09_task_runners.py  10_fleet.py  11_fleet_async.py  AGENTS.md  Dockerfile.server  MISSION.md  NOTES.md  README.md  RESOURCES.md  alert_listener.py  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  prefect.toml  pyproject.toml  ruff.toml  skills-lock.json
.claude/: launch.json  settings.json
.husky/: commit-msg  pre-commit
assets/: lesson.css
drafts/: runner-platform-design-v1-docker.md  runner-platform-design.md
learning-records/: 0001-starting-point.md  0002-resilience-retries.md  0003-caching.md  0004-results-cos.md  0005-deployments-schedules.md  0006-diagnose-failures.md  0007-failure-alerts.md  0008-mission-expanded-scale.md  0009-work-pools-workers.md  0010-task-runners.md  0011-review-retrieve.md  0012-concurrency-limits-saturation.md  0013-fleet-topology-fan-out.md  0014-gather-fan-out.md  0015-run-the-fleet.md  0016-async-coordinator.md  0017-async-native-reorg.md  0018-review-the-fleet.md
lessons/: 0001-see-your-flow-run.html  0002-when-things-fail.html  0003-dont-redo-work.html  0004-results-and-cos.html  0005-on-a-schedule.html  0006-diagnose-a-failure.html  0007-get-alerted.html  0008-work-pools-and-workers.html  0009-distribute-the-work.html  0010-review-and-retrieve.html  0011-count-runs-not-cores.html  0012-fan-out-the-fleet.html  (+6 more)
(+16 files in other folders)
